--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
   </repositories>
 
   <parent>
-    <groupId>wwmm</groupId>
+    <groupId>uk.ac.cam.ch.wwmm</groupId>
     <artifactId>wwmm-parent</artifactId>
-    <version>2-SNAPSHOT</version>
+    <version>3</version>
   </parent>
 
   <dependencies>
