--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.xml-cml</groupId>
 	<artifactId>euclid-testutil</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<packaging>jar</packaging>
 	<name>Euclid-Testutil</name>
 	<description>Test utilities for the Euclid project</description>
