--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
 		</developer>
 	</developers>
 
+        <!-- remove <repositories> for releases to maven central -->
+        <repositories>
+                <repository>
+                        <id>ucc-repo</id>
+                        <name>UCC Repository</name>
+                        <url>https://maven.ch.cam.ac.uk/m2repo</url>
+                </repository>
+        </repositories>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
