--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<packaging>jar</packaging>
 	<name>Euclid-Testutil</name>
 	<description>Test utilities for the Euclid project</description>
-	<url>http://bitbucket.org/wwmm/euclid-testutil</url>
+	<url>https://github.com/BlueObelisk/euclid-testutil</url>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
@@ -22,9 +22,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://bitbucket.org/wwmm/euclid-testutil/src</url>
-		<connection>scm:hg:http://bitbucket.org/wwmm/euclid-testutil</connection>
-		<developerConnection>scm:hg:https://bitbucket.org/wwmm/euclid-testutil</developerConnection>
+		<url>https://github.com/BlueObelisk/euclid-testutil</url>
+		<connection>scm:git:https://github.com/BlueObelisk/euclid-testutil</connection>
+		<developerConnection>scm:git:https://github.com/BlueObelisk/euclid-testutil</developerConnection>
 	</scm>
 	<developers>
 		<developer>
@@ -40,16 +40,6 @@
 			<name>David Jessop</name>
 		</developer>
 	</developers>
-
-        <!-- remove <repositories> for releases to maven central -->
-        <repositories>
-                <repository>
-                        <id>ucc-repo</id>
-                        <name>UCC Repository</name>
-                        <url>https://maven.ch.cam.ac.uk/m2repo</url>
-                </repository>
-        </repositories>
-
 
 	<dependencies>
 		<dependency>
